Add RabbitMQ integration and refactor order handling

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -36,6 +36,14 @@ services:
     volumes:
       - mongodb-data:/data/db
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - backend-network
+
 networks:
   backend-network:
     driver: bridge
