--- a/backend/order-service/package.json
+++ b/backend/order-service/package.json
@@ -4,6 +4,7 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "amqplib": "^0.10.4",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
         "mongoose": "^8.8.1"
