--- a/backend/order-service/package.json
+++ b/backend/order-service/package.json
@@ -7,6 +7,7 @@
         "amqplib": "^0.10.4",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
-        "mongoose": "^8.8.1"
+        "mongoose": "^8.8.1",
+        "jsonwebtoken": "^9.0.2"
     }
 }
