--- a/backend/product-service/package.json
+++ b/backend/product-service/package.json
@@ -7,7 +7,8 @@
         "amqplib": "^0.10.4",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.8.1",
-        "jsonwebtoken": "^9.0.2"
+        "uuid": "^11.0.3"
     }
 }
