--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -27,24 +27,27 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        location /api/users/ {
-            proxy_pass http://user_service/;
+        location ~* ^/api/users/?(.*)$ {
+            rewrite ^/api/users/?(.*)$ /$1 break;
+            proxy_pass http://user_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/products/ {
-            proxy_pass http://product_service/;
+        location ~* ^/api/products/?(.*)$ {
+            rewrite ^/api/products/?(.*)$ /$1 break;
+            proxy_pass http://product_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/orders/ {
-            proxy_pass http://order_service/;
+        location ~* ^/api/orders/?(.*)$ {
+            rewrite ^/api/orders/?(.*)$ /$1 break;
+            proxy_pass http://order_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
